--- a/index.html
+++ b/index.html
@@ -60,11 +60,106 @@
   </header>
 
   <section id="hero">
-    <div class="hero-text">
-      <h1>A console for <br />every workflow</h1>
-      <p>Discover the perfect console for yours.</p>
+    <div class="container">
+      <div class="row">
+        <div class="hero-text">
+          <h1>A console for <br />every workflow</h1>
+          <p>Discover the perfect console for yours.</p>
+        </div>
+      </div>
     </div>
   </section>
+
+  <section id="product-grid">
+      <div>
+        <h3>Mini Console</h3>
+        <p>Ideal for everyday shortcuts. Adaptable to any workflow.</p>
+      </div>
+      <div>
+        <h3>Audio Console</h3>
+        <p>Ideal for music & audio. Adaptable to any workflow.</p>
+      </div>
+      <div>
+        <h3>Photo Console</h3>
+        <p>Ideal for photo & video. Adaptable to any workflow.</p>
+      </div>
+      <div>
+        <h3>Video Console</h3>
+        <p>Ideal for Video & Film. Adaptable to any workflow.</p>
+      </div>
+  </section>
+
+  <section>
+    <h1>Create your own console</h1>
+    <p>Add-on to make it perfect</p>
+  </section>
+
+  <section>
+    <h3>Monogram Core</h3>
+    <p>155,95€</p>
+    <h3>Slider Module</h3>
+    <p>Sold Out</p>
+    <h3>Orbiter Module</h3>
+    <p>Sold Out</p>
+    <h3>Essential Keys Module</h3>
+    <p>Sold Out</p>
+    <h3>Dial Module</h3>
+    <p>Sold Out</p>
+    <h3>Monogram Carrying Case</h3>
+    <p>Sold Out</p>
+    <h3>Console Pack: Video</h3>
+    <p>67,95 €</p>
+    <h3>Console Pack: Photo</h3>
+    <p>38,95 €</p>
+    <h3>Console Pack: Audio</h3>
+    <p>28,95 €</p>
+    <h3>Monogram Care</h3>
+    <p>18,95 € - 126,95 €</p>
+  </section>
+
+  <footer>
+    <div>
+      <p>Monogram</p>
+      <p>305 King St. W. <br/>
+      Suite 502<br />
+      Kitchener, ON<br />
+      Canada</p>
+    </div>
+    <div>
+      <p>Quick Links</p>
+      <p>Home</p>
+      <p>How it works</p>
+      <p>Shop</p>
+      <p>Download</p>
+    </div>
+    <div>
+      <p>Help</p>
+      <p>FAQs</p>
+      <p>Support Center</p>
+      <p>Shipping and Sales</p>
+    </div>
+    <div>
+      <p>Information</p>
+      <p>About Us</p>
+      <p>Work with us</p>
+      <p>Privacy Policy</p>
+      <p>Terms of Use</p>
+      <p>Terms of Sale</p>
+      <p>Press Kit</p>
+    </div>
+    <div>
+      <p>Subscribe to Monogram</p>
+      <p>Master productivity with Creative Console
+        and get all the latest Monogram news.</p>
+        <div>
+          <form method="post">
+            <input type="email" placeholder="Email Adress">
+          </form>
+          <button>Submit</button>
+          <p>&#169; Monogram 2025</p>
+        </div>
+    </div>
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
