adding product images

--- a/index.html
+++ b/index.html
@@ -61,32 +61,41 @@
 
   <section id="hero">
     <div class="container">
-      <div class="row">
         <div class="hero-text">
           <h1>A console for <br />every workflow</h1>
           <p>Discover the perfect console for yours.</p>
         </div>
       </div>
-    </div>
+
   </section>
 
   <section id="product-grid">
+    <div class="container">
       <div>
+        <img src="images/products/mini-console-1.jpg" alt="">
+        <img src="images/products/mini-console-2.jpg" class="slide" alt="">
         <h3>Mini Console</h3>
         <p>Ideal for everyday shortcuts. Adaptable to any workflow.</p>
       </div>
       <div>
+        <img src="images/products/audio-console-1.jpg" alt="">
+        <img src="images/products/audio-console-2.jpg" class="slide" alt="">
         <h3>Audio Console</h3>
         <p>Ideal for music & audio. Adaptable to any workflow.</p>
       </div>
       <div>
+        <img src="images/products/photo-console-1.jpg" alt="">
+        <img src="images/products/photo-console-2.jpg" class="slide" alt="">
         <h3>Photo Console</h3>
         <p>Ideal for photo & video. Adaptable to any workflow.</p>
       </div>
       <div>
+          <img src="images/products/video-console-1.jpg" alt="">
+          <img src="images/products/video-console-2.jpg" class="slide" alt="">
         <h3>Video Console</h3>
         <p>Ideal for Video & Film. Adaptable to any workflow.</p>
       </div>
+    </div>
   </section>
 
   <section>
