--- a/index.html
+++ b/index.html
@@ -66,39 +66,56 @@
           <p>Discover the perfect console for yours.</p>
         </div>
       </div>
-
   </section>
 
   <section id="product-grid">
     <div class="container">
-      <div>
-        <img src="images/products/mini-console-1.jpg" alt="">
-        <img src="images/products/mini-console-2.jpg" class="slide" alt="">
-        <h3>Mini Console</h3>
-        <p>Ideal for everyday shortcuts. Adaptable to any workflow.</p>
+      <div class="product-listing">
+        <img src="images/products/mini-console-1.jpg" onmouseover="this.src='/images/products/mini-console-2.jpg';" onmouseout="this.src='/images/products/mini-console-1.jpg';"/>
+        <div class="product-description">
+          <div class="product-name">
+            <h3>Mini Console</h3>
+            <p>Ideal for everyday shortcuts. Adaptable to any workflow.</p>
+          </div>
+          <div class="product-stock">
+            <p>Sold Out</p>
+          </div>
+        </div>
       </div>
-      <div>
-        <img src="images/products/audio-console-1.jpg" alt="">
-        <img src="images/products/audio-console-2.jpg" class="slide" alt="">
-        <h3>Audio Console</h3>
-        <p>Ideal for music & audio. Adaptable to any workflow.</p>
+
+      <div class="product-listing">
+        <img src="images/products/audio-console-1.jpg" onmouseover="this.src='/images/products/audio-console-2.jpg';" onmouseout="this.src='/images/products/audio-console-1.jpg';" />
+        <div class="product-description">
+          <div class="product-name">
+            <h3>Audio Console</h3>
+            <p>Ideal for music & audio. Adaptable to any workflow.</p>
+          </div>
+        </div>
       </div>
-      <div>
-        <img src="images/products/photo-console-1.jpg" alt="">
-        <img src="images/products/photo-console-2.jpg" class="slide" alt="">
-        <h3>Photo Console</h3>
-        <p>Ideal for photo & video. Adaptable to any workflow.</p>
+
+      <div class="product-listing">
+        <img src="images/products/photo-console-1.jpg"  onmouseover="this.src='/images/products/photo-console-2.jpg';" onmouseout="this.src='/images/products/photo-console-1.jpg';">
+        <div class="product-description">
+          <div class="product-name">
+            <h3>Photo Console</h3>
+            <p>Ideal for photo & video. Adaptable to any workflow.</p>
+          </div>
+        </div>
       </div>
-      <div>
-          <img src="images/products/video-console-1.jpg" alt="">
-          <img src="images/products/video-console-2.jpg" class="slide" alt="">
-        <h3>Video Console</h3>
-        <p>Ideal for Video & Film. Adaptable to any workflow.</p>
+
+      <div class="product-listing">
+        <img src="images/products/video-console-1.jpg"  onmouseover="this.src='/images/products/video-console-2.jpg';" onmouseout="this.src='images/products/video-console-1.jpg';">
+        <div class="product-description">
+          <div class="product-name">
+            <h3>Video Console</h3>
+            <p>Ideal for Video & Film. Adaptable to any workflow.</p>
+          </div>
+        </div>
       </div>
     </div>
   </section>
 
-  <section>
+  <section id="shop-banner">
     <h1>Create your own console</h1>
     <p>Add-on to make it perfect</p>
   </section>
