added imagesfor second product grid

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       </div>
   </section>
 
-  <section id="product-grid">
+  <section id="product-grid-1">
     <div class="container">
       <div class="product-listing">
         <img src="images/products/mini-console-1.jpg" onmouseover="this.src='/images/products/mini-console-2.jpg';" onmouseout="this.src='/images/products/mini-console-1.jpg';"/>
@@ -120,71 +120,143 @@
     <p>Add-on to make it perfect</p>
   </section>
 
-  <section>
-    <h3>Monogram Core</h3>
-    <p>155,95€</p>
-    <h3>Slider Module</h3>
-    <p>Sold Out</p>
-    <h3>Orbiter Module</h3>
-    <p>Sold Out</p>
-    <h3>Essential Keys Module</h3>
-    <p>Sold Out</p>
-    <h3>Dial Module</h3>
-    <p>Sold Out</p>
-    <h3>Monogram Carrying Case</h3>
-    <p>Sold Out</p>
-    <h3>Console Pack: Video</h3>
-    <p>67,95 €</p>
-    <h3>Console Pack: Photo</h3>
-    <p>38,95 €</p>
-    <h3>Console Pack: Audio</h3>
-    <p>28,95 €</p>
-    <h3>Monogram Care</h3>
-    <p>18,95 € - 126,95 €</p>
+  <section id="product-grid-2">
+    <div class="container">
+      <div class="product-listing">
+        <img src="images/products/monogram_core-1.jpg" onmouseover="this.src='/images/products/monogram_core-2.jpg';" onmouseout="this.src='/images/products/monogram_core-1.jpg';">
+        <div class="product-description">
+          <h3>Monogram Core</h3>
+          <p>155,95€</p>
+        </div>
+      </div>
+
+      <div class="product-listing">
+         <img src="images/products/monogram_core-1.jpg" onmouseover="this.src='/images/products/slider-module-2.jpg';"
+                  onmouseout="this.src='/images/products/slider-module-1.jpg';">
+        <div class="product-description">
+          <h3>Slider Module</h3>
+          <p>Sold Out</p>
+        </div>
+      </div>
+
+      <div class="product-listing">
+        <img src="images/products/orbiter-module-1.jpg" onmouseover="this.src='/images/products/orbiter-module-2.jpg';"
+          onmouseout="this.src='/images/products/orbiter-module-1.jpg';">
+        <div class="product-description">
+          <h3>Orbiter Module</h3>
+          <p>Sold Out</p>
+        </div>
+      </div>
+
+      <div class="product-listing">
+        <img src="images/products/essential-keys-1.jpg" onmouseover="this.src='/images/products/essential-keys-2.jpg';"
+          onmouseout="this.src='/images/products/essential-keys-1.jpg';">
+        <div class="product-description">
+          <h3>Essential Keys Module</h3>
+          <p>Sold Out</p>
+        </div>
+      </div>
+
+      <div class="product-listing">
+        <img src="images/products/dial-module-1.jpg" onmouseover="this.src='/images/products/dial-module-2.jpg';"
+          onmouseout="this.src='/images/products/dial-module-1.jpg';">
+        <div class="product-description">
+          <h3>Dial Module</h3>
+          <p>Sold Out</p>
+        </div>
+      </div>
+
+      <div class="product-listing">
+        <img src="images/products/carrying-case-1.jpg" onmouseover="this.src='/images/products/carrying-case-2.jpg';"
+          onmouseout="this.src='/images/products/carrying-case-1.jpg';">
+        <div class="product-description">
+          <h3>Monogram Carrying Case</h3>
+          <p>Sold Out</p>
+        </div>
+      </div>
+
+      <div class="product-listing">
+        <img src="images/products/console-pack-video.jpg">
+        <div class="product-description">
+          <h3>Console Pack: Video</h3>
+          <p>67,95 €</p>
+        </div>
+      </div>
+
+      <div class="product-listing">
+        <img src="images/products/console-pack-photo.jpg">
+        <div class="product-description">
+          <h3>Console Pack: Photo</h3>
+          <p>38,95 €</p>
+        </div>
+      </div>
+
+      <div class="product-listing">
+        <img src="images/products/console-pack-audio.jpg">
+        <div class="product-description">
+          <h3>Console Pack: Audio</h3>
+          <p>28,95 €</p>
+        </div>
+      </div>
+
+      <div class="product-listing">
+        <img src="images/products/monogram-care.jpg">
+        <div class="product-description">
+          <h3>Monogram Care</h3>
+          <p>18,95 € - 126,95 €</p>
+        </div>
+      </div>
+    </div>
   </section>
 
   <footer>
-    <div>
-      <p>Monogram</p>
-      <p>305 King St. W. <br/>
-      Suite 502<br />
-      Kitchener, ON<br />
-      Canada</p>
-    </div>
-    <div>
-      <p>Quick Links</p>
-      <p>Home</p>
-      <p>How it works</p>
-      <p>Shop</p>
-      <p>Download</p>
-    </div>
-    <div>
-      <p>Help</p>
-      <p>FAQs</p>
-      <p>Support Center</p>
-      <p>Shipping and Sales</p>
-    </div>
-    <div>
-      <p>Information</p>
-      <p>About Us</p>
-      <p>Work with us</p>
-      <p>Privacy Policy</p>
-      <p>Terms of Use</p>
-      <p>Terms of Sale</p>
-      <p>Press Kit</p>
-    </div>
-    <div>
-      <p>Subscribe to Monogram</p>
-      <p>Master productivity with Creative Console
-        and get all the latest Monogram news.</p>
-        <div>
-          <form method="post">
-            <input type="email" placeholder="Email Adress">
-          </form>
-          <button>Submit</button>
-          <p>&#169; Monogram 2025</p>
+    <div class="container">
+      <address>
+        <p>Monogram</p>
+        <p>305 King St. W. <br/>
+        Suite 502<br />
+        Kitchener, ON<br />
+        Canada</p>
+        </address>
+      <div>
+        <h3>Quick Links</h3>
+        <ul>
+          <li>Home</li>
+          <li>How it works</li>
+          <li>Shop</li>
+          <li>Download</li>
+        </ul>
+      </div>
+      <div>
+        <li>Help</p>
+        <li>FAQs</p>
+        <li>Support Center</p>
+        <li>Shipping and Sales</p>
+      </div>
+      <div>
+        <h3>Information</h3>
+        <ul>
+          <li>About Us</li>
+          <li>Work with us</li>
+          <li>Privacy Policy</li>
+          <li>Terms of Use</li>
+          <li>Terms of Sale</li>
+          <li>>Press Kit</li>
+      </ul>
+      </div>
+      <div>
+        <p>Subscribe to Monogram</p>
+        <p>Master productivity with Creative Console
+          and get all the latest Monogram news.</p>
+          <div>
+            <form method="post">
+              <input type="email" placeholder="Email Adress">
+            </form>
+            <button>Submit</button>
+            <p>&#169; Monogram 2025</p>
+          </div>
         </div>
-    </div>
+      </div>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
