--- a/index.html
+++ b/index.html
@@ -123,19 +123,47 @@
   <section id="product-grid-2">
     <div class="container">
       <div class="product-listing">
-        <img src="images/products/monogram_core-1.jpg" onmouseover="this.src='/images/products/monogram_core-2.jpg';" onmouseout="this.src='/images/products/monogram_core-1.jpg';">
+        <img src="images/products/monogram_keyboard-1.jpg" onmouseover="this.src='/images/products/monogram_keyboard-2.jpg';"
+          onmouseout="this.src='/images/products/monogram_keyboard-1.jpg';">
         <div class="product-description">
-          <h3>Monogram Core</h3>
+          <div class="product-name">
+            <h3>Monogram Keyboard</h3>
+          </div>
+          <div class="product-stock">
+            <p>Sold Out</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="product-listing">
+        <img src="images/products/monogram_multipad-1.jpg" onmouseover="this.src='/images/products/monogram_multipad-2.jpg';"
+          onmouseout="this.src='/images/products/monogram_multipad-1.jpg';">
+        <div class="product-description">
+          <h3>Monogram Multipad</h3>
           <p>155,95€</p>
         </div>
       </div>
 
       <div class="product-listing">
-         <img src="images/products/monogram_core-1.jpg" onmouseover="this.src='/images/products/slider-module-2.jpg';"
+        <img src="images/products/monogram_core-1.jpg" onmouseover="this.src='/images/products/monogram_core-2.jpg';" onmouseout="this.src='/images/products/monogram_core-1.jpg';">
+        <div class="product-description">
+          <div class="product-name">
+            <h3>Monogram Core</h3>
+            <p>155,95€</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="product-listing">
+        <img src="images/products/slider-module-1.jpg" onmouseover="this.src='/images/products/slider-module-2.jpg';"
                   onmouseout="this.src='/images/products/slider-module-1.jpg';">
         <div class="product-description">
-          <h3>Slider Module</h3>
-          <p>Sold Out</p>
+          <div class="product-name">
+            <h3>Slider Module</h3>
+          </div>
+          <div class="product-stock">
+            <p>Sold Out</p>
+          </div>
         </div>
       </div>
 
@@ -143,8 +171,12 @@
         <img src="images/products/orbiter-module-1.jpg" onmouseover="this.src='/images/products/orbiter-module-2.jpg';"
           onmouseout="this.src='/images/products/orbiter-module-1.jpg';">
         <div class="product-description">
-          <h3>Orbiter Module</h3>
-          <p>Sold Out</p>
+          <div class="product-name">
+            <h3>Orbiter Module</h3>
+          </div>
+          <div class="product-stock">
+            <p>Sold Out</p>
+          </div>
         </div>
       </div>
 
@@ -152,8 +184,12 @@
         <img src="images/products/essential-keys-1.jpg" onmouseover="this.src='/images/products/essential-keys-2.jpg';"
           onmouseout="this.src='/images/products/essential-keys-1.jpg';">
         <div class="product-description">
-          <h3>Essential Keys Module</h3>
-          <p>Sold Out</p>
+          <div class="product-name">
+            <h3>Essential Keys Module</h3>
+          </div>
+          <div class="product-stock">
+            <p>Sold Out</p>
+          </div>
         </div>
       </div>
 
@@ -161,8 +197,12 @@
         <img src="images/products/dial-module-1.jpg" onmouseover="this.src='/images/products/dial-module-2.jpg';"
           onmouseout="this.src='/images/products/dial-module-1.jpg';">
         <div class="product-description">
-          <h3>Dial Module</h3>
-          <p>Sold Out</p>
+          <div class="product-name">
+            <h3>Dial Module</h3>
+          </div>
+          <div class="product-stock">
+            <p>Sold Out</p>
+          </div>
         </div>
       </div>
 
@@ -170,15 +210,21 @@
         <img src="images/products/carrying-case-1.jpg" onmouseover="this.src='/images/products/carrying-case-2.jpg';"
           onmouseout="this.src='/images/products/carrying-case-1.jpg';">
         <div class="product-description">
-          <h3>Monogram Carrying Case</h3>
-          <p>Sold Out</p>
+          <div class="product-name">
+            <h3>Monogram Carrying Case</h3>
+          </div>
+          <div class="product-stock">
+            <p>Sold Out</p>
+          </div>
         </div>
       </div>
 
       <div class="product-listing">
         <img src="images/products/console-pack-video.jpg">
         <div class="product-description">
-          <h3>Console Pack: Video</h3>
+          <div class="product-name">
+            <h3>Console Pack: Video</h3>
+          </div>
           <p>67,95 €</p>
         </div>
       </div>
@@ -186,7 +232,9 @@
       <div class="product-listing">
         <img src="images/products/console-pack-photo.jpg">
         <div class="product-description">
+          <div class="product-name">
           <h3>Console Pack: Photo</h3>
+          </div>
           <p>38,95 €</p>
         </div>
       </div>
@@ -194,7 +242,9 @@
       <div class="product-listing">
         <img src="images/products/console-pack-audio.jpg">
         <div class="product-description">
+          <div class="product-name">
           <h3>Console Pack: Audio</h3>
+          </div>
           <p>28,95 €</p>
         </div>
       </div>
@@ -212,15 +262,15 @@
   <footer>
     <div class="container">
       <address>
-        <p>Monogram</p>
+        <p class="footer-title"><b>Monogram</b></p>
         <p>305 King St. W. <br/>
         Suite 502<br />
         Kitchener, ON<br />
         Canada</p>
-        </address>
+      </address>
       <div>
-        <h3>Quick Links</h3>
-        <ul>
+        <p class="footer-title"><b>Quick Links</b></p>
+        <ul class="footer-links">
           <li>Home</li>
           <li>How it works</li>
           <li>Shop</li>
@@ -228,14 +278,16 @@
         </ul>
       </div>
       <div>
-        <li>Help</p>
-        <li>FAQs</p>
-        <li>Support Center</p>
-        <li>Shipping and Sales</p>
+        <p class="footer-title"><b>Help</b></p>
+        <ul class="footer-links">
+          <li>FAQs</li>
+          <li>Support Center</li>
+          <li>Shipping and Sales</li>
+        </ul>
       </div>
       <div>
-        <h3>Information</h3>
-        <ul>
+        <p class="footer-title"><b>Information</b></p>
+        <ul class="footer-links">
           <li>About Us</li>
           <li>Work with us</li>
           <li>Privacy Policy</li>
@@ -245,14 +297,16 @@
       </ul>
       </div>
       <div>
-        <p>Subscribe to Monogram</p>
+        <p class="footer-title"><b>Subscribe to Monogram</b></p>
         <p>Master productivity with Creative Console
           and get all the latest Monogram news.</p>
           <div>
-            <form method="post">
-              <input type="email" placeholder="Email Adress">
-            </form>
-            <button>Submit</button>
+            <div class="footer-form">
+              <form method="post">
+                <input type="email" placeholder="Email Adress">
+              </form>
+              <button>Submit</button>
+              </div>
             <p>&#169; Monogram 2025</p>
           </div>
         </div>
