worked on the buttonss

--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
 
   <section id="hero">
     <div class="container">
-        <div class="hero-text">
-          <h1>A console for <br />every workflow</h1>
-          <p>Discover the perfect console for yours.</p>
-        </div>
+      <div class="hero-text">
+        <h1>A console for <br />every workflow</h1>
+        <p>Discover the perfect console for yours.</p>
       </div>
+    </div>
   </section>
 
   <section id="product-grid-1">
@@ -74,7 +74,7 @@
         <img src="images/products/mini-console-1.jpg" onmouseover="this.src='/images/products/mini-console-2.jpg';" onmouseout="this.src='/images/products/mini-console-1.jpg';"/>
         <div class="product-description">
           <div class="product-name">
-            <h3>Mini Console</h3>
+            <h3 class="product">Mini Console</h3>
             <p>Ideal for everyday shortcuts. Adaptable to any workflow.</p>
           </div>
           <div class="product-stock">
@@ -87,7 +87,7 @@
         <img src="images/products/audio-console-1.jpg" onmouseover="this.src='/images/products/audio-console-2.jpg';" onmouseout="this.src='/images/products/audio-console-1.jpg';" />
         <div class="product-description">
           <div class="product-name">
-            <h3>Audio Console</h3>
+            <h3 class="product">Audio Console</h3>
             <p>Ideal for music & audio. Adaptable to any workflow.</p>
           </div>
         </div>
@@ -97,7 +97,7 @@
         <img src="images/products/photo-console-1.jpg"  onmouseover="this.src='/images/products/photo-console-2.jpg';" onmouseout="this.src='/images/products/photo-console-1.jpg';">
         <div class="product-description">
           <div class="product-name">
-            <h3>Photo Console</h3>
+            <h3 class="product">Photo Console</h3>
             <p>Ideal for photo & video. Adaptable to any workflow.</p>
           </div>
         </div>
@@ -107,7 +107,7 @@
         <img src="images/products/video-console-1.jpg"  onmouseover="this.src='/images/products/video-console-2.jpg';" onmouseout="this.src='images/products/video-console-1.jpg';">
         <div class="product-description">
           <div class="product-name">
-            <h3>Video Console</h3>
+            <h3 class="product">Video Console</h3>
             <p>Ideal for Video & Film. Adaptable to any workflow.</p>
           </div>
         </div>
@@ -116,8 +116,10 @@
   </section>
 
   <section id="shop-banner">
-    <h1>Create your own console</h1>
-    <p>Add-on to make it perfect</p>
+    <div>
+      <h1><b>Create your own console</b></h1>
+      <p>Add-on to make it perfect</p>
+    </div>
   </section>
 
   <section id="product-grid-2">
@@ -127,7 +129,7 @@
           onmouseout="this.src='/images/products/monogram_keyboard-1.jpg';">
         <div class="product-description">
           <div class="product-name">
-            <h3>Monogram Keyboard</h3>
+            <h3 class="product">Monogram Keyboard</h3>
           </div>
           <div class="product-stock">
             <p>Sold Out</p>
@@ -139,8 +141,12 @@
         <img src="images/products/monogram_multipad-1.jpg" onmouseover="this.src='/images/products/monogram_multipad-2.jpg';"
           onmouseout="this.src='/images/products/monogram_multipad-1.jpg';">
         <div class="product-description">
-          <h3>Monogram Multipad</h3>
-          <p>155,95€</p>
+          <div class="product-name">
+            <h3 class="product">Monogram Multipad</h3>
+          </div>
+          <div class="product-price">
+            <p>155,95€</p>
+          </div>
         </div>
       </div>
 
@@ -148,7 +154,9 @@
         <img src="images/products/monogram_core-1.jpg" onmouseover="this.src='/images/products/monogram_core-2.jpg';" onmouseout="this.src='/images/products/monogram_core-1.jpg';">
         <div class="product-description">
           <div class="product-name">
-            <h3>Monogram Core</h3>
+            <h3 class="product">Monogram Core</h3>
+          </div>
+          <div class="product-price">
             <p>155,95€</p>
           </div>
         </div>
@@ -159,7 +167,7 @@
                   onmouseout="this.src='/images/products/slider-module-1.jpg';">
         <div class="product-description">
           <div class="product-name">
-            <h3>Slider Module</h3>
+            <h3 class="product">Slider Module</h3>
           </div>
           <div class="product-stock">
             <p>Sold Out</p>
@@ -172,7 +180,7 @@
           onmouseout="this.src='/images/products/orbiter-module-1.jpg';">
         <div class="product-description">
           <div class="product-name">
-            <h3>Orbiter Module</h3>
+            <h3 class="product">Orbiter Module</h3>
           </div>
           <div class="product-stock">
             <p>Sold Out</p>
@@ -185,7 +193,7 @@
           onmouseout="this.src='/images/products/essential-keys-1.jpg';">
         <div class="product-description">
           <div class="product-name">
-            <h3>Essential Keys Module</h3>
+            <h3 class="product">Essential Keys Module</h3>
           </div>
           <div class="product-stock">
             <p>Sold Out</p>
@@ -198,7 +206,7 @@
           onmouseout="this.src='/images/products/dial-module-1.jpg';">
         <div class="product-description">
           <div class="product-name">
-            <h3>Dial Module</h3>
+            <h3 class="product">Dial Module</h3>
           </div>
           <div class="product-stock">
             <p>Sold Out</p>
@@ -211,7 +219,7 @@
           onmouseout="this.src='/images/products/carrying-case-1.jpg';">
         <div class="product-description">
           <div class="product-name">
-            <h3>Monogram Carrying Case</h3>
+            <h3 class="product">Monogram Carrying Case</h3>
           </div>
           <div class="product-stock">
             <p>Sold Out</p>
@@ -223,9 +231,11 @@
         <img src="images/products/console-pack-video.jpg">
         <div class="product-description">
           <div class="product-name">
-            <h3>Console Pack: Video</h3>
+            <h3 class="product">Console Pack: Video</h3>
           </div>
-          <p>67,95 €</p>
+          <div class="product-price">
+            <p>67,95 €</p>
+          </div>
         </div>
       </div>
 
@@ -233,9 +243,12 @@
         <img src="images/products/console-pack-photo.jpg">
         <div class="product-description">
           <div class="product-name">
-          <h3>Console Pack: Photo</h3>
+            <h3 class="product">Console Pack: Photo</h3>
           </div>
-          <p>38,95 €</p>
+          <div class="product-price">
+            <p class="price">38,95 €</p>
+            <button class="product-cta">Buy Now</button>
+          </div>
         </div>
       </div>
 
@@ -243,17 +256,23 @@
         <img src="images/products/console-pack-audio.jpg">
         <div class="product-description">
           <div class="product-name">
-          <h3>Console Pack: Audio</h3>
+            <h3 class="product">Console Pack: Audio</h3>
           </div>
-          <p>28,95 €</p>
+          <div class="product-price">
+            <p>28,95 €</p>
+          </div>
         </div>
       </div>
 
       <div class="product-listing">
         <img src="images/products/monogram-care.jpg">
         <div class="product-description">
-          <h3>Monogram Care</h3>
-          <p>18,95 € - 126,95 €</p>
+          <div class="product-name">
+            <h3>Monogram Care</h3>
+          </div>
+          <div class="product-price">
+            <p>18,95 € - 126,95 €</p>
+          </div>
         </div>
       </div>
     </div>
@@ -293,7 +312,7 @@
           <li>Privacy Policy</li>
           <li>Terms of Use</li>
           <li>Terms of Sale</li>
-          <li>>Press Kit</li>
+          <li>Press Kit</li>
       </ul>
       </div>
       <div>
