removed dropdown currency

--- a/index.html
+++ b/index.html
@@ -41,19 +41,6 @@
         </div>
         <div class="navbar-nocollapse">
           <a class="nav-link" href="#"><img src="images/bag-icon.png" alt="logo-bag" id="nav-icon"></a></li>
-          <div class="dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" id="currencyDropdown">EUR</a>
-              <ul class="dropdown-menu" aria-labelledby="currencyDropdown">
-                <li><a class="dropdown-item" href="#">USD</a></li>
-                <li><a class="dropdown-item" href="#">CAD</a></li>
-                <li><a class="dropdown-item" href="#">AUD</a></li>
-                <li><a class="dropdown-item" href="#">GBP</a></li>
-                <li><a class="dropdown-item" href="#">KRW</a></li>
-                <li><a class="dropdown-item" href="#">JPY</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div>
       </div>
     </div>
     </nav>
@@ -145,7 +132,8 @@
             <h3 class="product">Monogram Multipad</h3>
           </div>
           <div class="product-price">
-            <p>155,95€</p>
+            <p class="price">155,95€</p>
+            <button class="product-cta">Shop Now</button>
           </div>
         </div>
       </div>
@@ -157,7 +145,8 @@
             <h3 class="product">Monogram Core</h3>
           </div>
           <div class="product-price">
-            <p>155,95€</p>
+            <p class="price">155,95€</p>
+            <button class="product-cta">Shop Now</button>
           </div>
         </div>
       </div>
@@ -234,7 +223,8 @@
             <h3 class="product">Console Pack: Video</h3>
           </div>
           <div class="product-price">
-            <p>67,95 €</p>
+            <p class="price">67,95 €</p>
+            <button class="product-cta">Shop Now</button>
           </div>
         </div>
       </div>
@@ -247,7 +237,7 @@
           </div>
           <div class="product-price">
             <p class="price">38,95 €</p>
-            <button class="product-cta">Buy Now</button>
+            <button class="product-cta">Shop Now</button>
           </div>
         </div>
       </div>
@@ -259,7 +249,8 @@
             <h3 class="product">Console Pack: Audio</h3>
           </div>
           <div class="product-price">
-            <p>28,95 €</p>
+            <p class="price">28,95 €</p>
+            <button class="product-cta">Shop Now</button>
           </div>
         </div>
       </div>
@@ -271,7 +262,8 @@
             <h3>Monogram Care</h3>
           </div>
           <div class="product-price">
-            <p>18,95 € - 126,95 €</p>
+            <p class="price">18,95 € - 126,95 €</p>
+            <button class="product-cta">Shop Now</button>
           </div>
         </div>
       </div>
